[workspace]
members = ["hyper_gumtree", "hyper_ast", "gen/tree-sitter/*", "cvs/git","client","benchmark","tree-sitter_types","ref-mining-evaluation","benchmark_diffs"]
exclude = ["gen/tree-sitter/java/tree-sitter-java", "gen/tree-sitter/html", "gen/tree-sitter/tsx", "gen/tree-sitter/pom"]
default-members = ["hyper_gumtree", "gen/tree-sitter/java", "gen/tree-sitter/xml", "cvs/git","benchmark","ref-mining-evaluation","benchmark_diffs"]
